Fixed responsive design keyboard and display sizing. Added text wrapping. Fixed bug allowing operator as initial key press.

--- a/style.css
+++ b/style.css
@@ -7,17 +7,44 @@ html, body {
 body {
     position: relative;    
 }
+h2 {
+    font-size: 2.7vmin;
+    padding: 0px;
+    margin: 0px;
+    font-weight: normal;
+    text-decoration: underline;
+}
 #calcDisplay {
     position: absolute;
     top: 10%;
     left: 25%;
+    right: 25%;
     width: 50%;
     height: 15%;
+    min-width: 250px;
+    min-height: 80px;
     border: 2px solid black;
     background-color: lightgray;
+    display: flex;
+    /* justify-content: center; */
+    /* align-items: center; */
+    flex-direction: column;
+
+}
+#calcDisplay div {    
+    font-size: 2.7vmin;
+    text-align: center;
+    width: 100%;
+    height: 50%;
+}
+#calcDisplay p {
+    padding: 0px;
+    margin: 0px;
+    
 }
 #inputRecord {
-    white-space: pre;
+    white-space: break-spaces;
+    word-wrap: break-word;
 }
 #keyContainer {
     position: absolute;
@@ -26,6 +53,8 @@ body {
     width: 50%;
     top: 25%;
     left: 25%;
+    min-width: 250px;
+    min-height: 250px;
     display: flex;
     flex-direction: row;
     flex-wrap: no-wrap;
@@ -35,7 +64,7 @@ body {
     border: 2px solid blue;
     flex: 1;
     display: flex;
-    flex-direction: column;    
+    flex-direction: column;
 }
 .keypadRow {
     border: 2px solid blue;
